--- a/build.gradle
+++ b/build.gradle
@@ -76,8 +76,8 @@ subprojects {
 
         testCompile 'junit:junit:4.11',
                     'org.jmock:jmock-junit4:2.5.1',
-                    'org.jmock:jmock-legacy:2.5.1'
-
+                    'org.jmock:jmock-legacy:2.5.1',
+                    'org.mockito:mockito-core:2.0.87-beta'
 
     }
 
