--- a/nanofix-client/build.gradle
+++ b/nanofix-client/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
     compile('com.google.guava:guava:13.0',
             'com.google.code.findbugs:jsr305:1.3.9',
-            'log4j:log4j:1.2.16',
+            'org.slf4j:slf4j-api:1.7.16',
             'joda-time:joda-time:2.5')
 
 
