--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@
 
 
 allprojects {
-    apply plugin: 'checkstyle'
+    //apply plugin: 'checkstyle'
     apply plugin: 'java'
     apply plugin: 'idea'
 
@@ -55,9 +55,9 @@ Version resolveVersion()
 }
 
 subprojects {
-    checkstyle {
-        configFile = new File(rootDir, "config/checkstyle/checkstyle.xml")
-    }
+    // checkstyle {
+    //     configFile = new File(rootDir, "config/checkstyle/checkstyle.xml")
+    // }
 
     repositories {
         mavenCentral()
@@ -65,10 +65,11 @@ subprojects {
 
     dependencies {
 
-        testCompile 'junit:junit:4.11',
-                    'org.jmock:jmock-junit4:2.5.1',
-                    'org.jmock:jmock-legacy:2.5.1',
-                    'org.mockito:mockito-core:2.0.87-beta'
+        testImplementation 'junit:junit-dep:4.11'
+        testImplementation 'org.hamcrest:hamcrest-library:1.3'
+        testImplementation 'org.jmock:jmock-junit4:2.5.1'
+        testImplementation 'org.jmock:jmock-legacy:2.5.1'
+        testImplementation 'org.mockito:mockito-core:2.0.87-beta'
 
     }
 
@@ -88,10 +89,6 @@ subprojects {
     artifacts {
         archives sourcesJar
     }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.1'
 }
 
 class Version
