--- a/nanofix-client/build.gradle
+++ b/nanofix-client/build.gradle
@@ -16,10 +16,10 @@
 
 dependencies {
 
-    compile('com.google.guava:guava:13.0',
-            'com.google.code.findbugs:jsr305:1.3.9',
-            'org.slf4j:slf4j-api:1.7.16',
-            'joda-time:joda-time:2.5')
+    implementation 'com.google.guava:guava:13.0'
+    implementation 'com.google.code.findbugs:jsr305:1.3.9'
+    implementation 'org.slf4j:slf4j-api:1.7.16'
+    implementation 'joda-time:joda-time:2.5'
 
 
 }
