--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@
 
 
 allprojects {
-    //apply plugin: 'checkstyle'
+    apply plugin: 'checkstyle'
     apply plugin: 'java'
     apply plugin: 'idea'
 
@@ -55,9 +55,9 @@ Version resolveVersion()
 }
 
 subprojects {
-    // checkstyle {
-    //     configFile = new File(rootDir, "config/checkstyle/checkstyle.xml")
-    // }
+    checkstyle {
+        configFile = new File(rootDir, "config/checkstyle/checkstyle.xml")
+    }
 
     repositories {
         mavenCentral()
