--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ subprojects {
         testImplementation 'org.hamcrest:hamcrest-library:1.3'
         testImplementation 'org.jmock:jmock-junit4:2.5.1'
         testImplementation 'org.jmock:jmock-legacy:2.5.1'
-        testImplementation 'org.mockito:mockito-core:2.0.87-beta'
+        testImplementation 'org.mockito:mockito-core:2.1.0'
 
     }
 
