--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
-        java-version: '1.8'
+        java-version: '8.0.392+8'
         distribution: 'temurin'
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2.4.2
