--- a/nanofix-client/build.gradle
+++ b/nanofix-client/build.gradle
@@ -13,11 +13,31 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+plugins {
+    id 'maven-publish'
+}
 
 dependencies {
-
     implementation 'com.google.guava:guava:13.0'
     implementation 'com.google.code.findbugs:jsr305:1.3.9'
     implementation 'org.slf4j:slf4j-api:1.7.16'
+}
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+
+    repositories {
+        maven {
+            name = 'GitHubPackages'
+            url = 'https://maven.pkg.github.com/' + System.getenv('GITHUB_REPOSITORY')
+            credentials {
+                username = System.getenv('GITHUB_ACTOR')
+                password = System.getenv('GITHUB_TOKEN')
+            }
+        }
+    }
 }
