--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
         java-version: '8.0.392+8'
         distribution: 'temurin'
     - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@1.1.0
+      uses: gradle/wrapper-validation-action@v1
     - name: Build with Gradle
       uses: gradle/gradle-build-action@v2.11.1
       with:
