--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,9 @@ jobs:
           java-version: '8.0.392+8'
           distribution: 'temurin'
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@1.1.0
+        uses: gradle/wrapper-validation-action@v1
       - name: Publish package
-        uses: gradle/gradle-build-action@2.11.1
+        uses: gradle/gradle-build-action@v2.11.1
         with:
           arguments: publish
         env:
