--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,11 @@ allprojects {
 
     defaultTasks 'build'
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(11)
+        }
+    }
 
     ext {
         fullName = 'Nanofix'
@@ -65,7 +68,6 @@ subprojects {
     }
 
     task sourcesJar(type: Jar) {
-        classifier = 'sources'
         from sourceSets.main.allSource
     }
 
