--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,19 @@
 /build
-/buck-out
 /client/build
 /integration-tests/build
 /out
-
 /ideabuild/
-/.ant-targets*
 /eclipse
 /opt
-
-
-
 /cache
 /ivysettings.xml
 /foo.txt
 /foo.xml
-
-
-/.idea/ant.xml
-/.idea/compiler.xml
-/.idea/copyright
-/.idea/copyright/profiles_settings.xml
-/.idea/dataSources.xml
-/.idea/inspectionProfiles/profiles_settings.xml
-/.idea/inspectionProfiles/Project_Default.xml
-/.idea/libraries
-/.idea/vcs.xml
-/.idea/workspace.xml
-/.idea/gradle.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/uiDesigner.xml
+/.idea
 *.iml
 /nanofix.ipr
 
 .gradle/
 
-integration-tests/integration-tests.iml
 nanofix-client/build/
-nanofix-client/nanofix-client.iml
-nanofix.iml
+
