--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,19 +13,16 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
+    - name: Setup Java
+      uses: actions/setup-java@v5
       with:
-        java-version: '8.0.392+8'
         distribution: 'temurin'
-    - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@v1
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@v2.11.1
-      with:
-        arguments: build
+        java-version: 17
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+    - name: Build and test
+      run: ./gradlew check
+
