--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,11 @@ allprojects {
 
     defaultTasks 'build'
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(17)
+        }
+    }
 
     ext {
         fullName = 'Nanofix'
@@ -49,7 +52,7 @@ subprojects {
     dependencies {
         testImplementation 'junit:junit-dep:4.11'
         testImplementation 'org.hamcrest:hamcrest-library:1.3'
-        testImplementation 'org.mockito:mockito-core:2.1.0'
+        testImplementation 'org.mockito:mockito-core:5.20.0'
     }
 
     jar {
@@ -61,7 +64,6 @@ subprojects {
     }
 
     task sourcesJar(type: Jar) {
-        classifier = 'sources'
         from sourceSets.main.allSource
     }
 
