--- a/build.gradle
+++ b/build.gradle
@@ -87,7 +87,7 @@ class Version
 
     static Version resolve()
     {
-        String gitVersion = System.getenv('GITHUB_REF')
+        String gitVersion = System.getenv("NANOFIX_VERSION") ?: System.getenv('GITHUB_REF')
         if (!gitVersion) return Version.NO_VERSION
         def matcher = gitVersion =~ 'refs/tags/v([0-9]+)\\.([0-9]+)\\.([0-9]+)'
         if (matcher)
