Add Sources and Javadoc Jars for Maven Central
Co-authored-by: Markus Stoy <markus.stoy@lmax.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
       - name: Publish package
-        run: ./gradlew :nanofix-client:jreleaserFullRelease
+        run: ./gradlew publish :nanofix-client:jreleaserFullRelease --stacktrace
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           JRELEASER_MAVENCENTRAL_USERNAME: ${{ secrets.JRELEASER_MAVENCENTRAL_USERNAME }}
