Don't try to overwrite GitHub releases

--- a/nanofix-client/build.gradle
+++ b/nanofix-client/build.gradle
@@ -58,6 +58,7 @@ jreleaser {
     release {
         github {
             skipRelease = true
+            overwrite = false
         }
     }
     gitRootSearch = true
